--- a/transformers/llm/engine/CMakeLists.txt
+++ b/transformers/llm/engine/CMakeLists.txt
@@ -27,6 +27,7 @@ if (MNN_SEP_BUILD)
     else()
         add_library(llm STATIC ${SRCS})
     endif()
+    list(APPEND MNN_DEPS llm)
 else()
     add_library(llm OBJECT ${SRCS})
 endif()
@@ -39,11 +40,10 @@ if (LLM_SUPPORT_AUDIO AND MNN_BUILD_AUDIO)
 endif()
 
 add_executable(llm_demo ${CMAKE_CURRENT_LIST_DIR}/llm_demo.cpp)
+target_link_libraries(llm_demo ${MNN_DEPS})
 add_executable(embedding_demo ${CMAKE_CURRENT_LIST_DIR}/embedding_demo.cpp)
-IF (NOT MNN_SEP_BUILD)
-    target_link_libraries(llm_demo ${MNN_DEPS})
-    target_link_libraries(embedding_demo ${MNN_DEPS})
-ELSE ()
-    target_link_libraries(llm_demo ${MNN_DEPS} llm)
-    target_link_libraries(embedding_demo ${MNN_DEPS} llm)
-ENDIF ()
+target_link_libraries(embedding_demo ${MNN_DEPS})
+add_executable(audio_demo ${CMAKE_CURRENT_LIST_DIR}/audio_demo.cpp)
+target_link_libraries(audio_demo ${MNN_DEPS})
+add_executable(rollback_demo ${CMAKE_CURRENT_LIST_DIR}/rollback_demo.cpp)
+target_link_libraries(rollback_demo ${MNN_DEPS})
