--- a/source/backend/cpu/x86_x64/CMakeLists.txt
+++ b/source/backend/cpu/x86_x64/CMakeLists.txt
@@ -86,6 +86,7 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64)|(X86_64)|(x64)|(X64)|(amd64)|(AMD64)
         target_compile_options(MNNAVXFMA PRIVATE -DMNN_USE_SSE)
     endif()
     if(MSVC)
+        target_compile_options(MNNSSE PRIVATE /arch:AVX)
         if (MNN_AVX2)
             target_compile_options(MNNAVX PRIVATE /arch:AVX2)
             target_compile_options(MNNAVXFMA PRIVATE /arch:AVX2)
