--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -697,15 +697,21 @@ ENDIF()
 
 # NPU
 IF(MNN_NPU)
+    if (CMAKE_SYSTEM_NAME MATCHES "^Android")
+        set(HIAI_PATH ${ANDROID_ABI})
+    endif()
+    if (OHOS)
+        set(HIAI_PATH ${OHOS_ARCH})
+    endif()
     add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/source/backend/hiai/)
     IF(MNN_SEP_BUILD)
         list(APPEND MNN_DEPS MNN_NPU)
     ELSE()
         list(APPEND MNN_TARGETS MNN_NPU)
         list(APPEND MNN_OBJECTS_TO_LINK $<TARGET_OBJECTS:MNN_NPU>)
-        list(APPEND MNN_EXTRA_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/source/backend/hiai/3rdParty/${ANDROID_ABI}/libhiai.so)
-        list(APPEND MNN_EXTRA_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/source/backend/hiai/3rdParty/${ANDROID_ABI}/libhiai_ir_build.so)
-        list(APPEND MNN_EXTRA_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/source/backend/hiai/3rdParty/${ANDROID_ABI}/libhiai_ir.so)
+        list(APPEND MNN_EXTRA_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/source/backend/hiai/3rdParty/${HIAI_PATH}/libhiai.so)
+        list(APPEND MNN_EXTRA_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/source/backend/hiai/3rdParty/${HIAI_PATH}/libhiai_ir_build.so)
+        list(APPEND MNN_EXTRA_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/source/backend/hiai/3rdParty/${HIAI_PATH}/libhiai_ir.so)
     ENDIF()
 ENDIF()
 
