--- a/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:name="com.alibaba.mnnllm.android.DemoApplication"
-        android:theme="@style/Theme.MnnLlmChat"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
         <uses-native-library android:name="libOpenCL.so"
             android:required="false"/>
